# n3ds-remote-play

./: .gitmodules  Cargo.toml  README.md  benchmark.md  build.rs  rust-toolchain.toml
.buildkite/: install-3ds-tools.sh  install-server-dependencies.sh  pipeline.yml
.cargo/: config.toml
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: client.rs  input_handler.rs  main.rs  mpeg_decoder.rs  system_thread.rs  thread.rs  udp_async_reader.rs  video_stream.rs
common/: Cargo.toml
common/src/: lib.rs  rtp_mpeg.rs
n3ds-controller-client/: Cargo.toml
n3ds-controller-client/src/: main.rs
n3ds-controller-common/: Cargo.toml
n3ds-controller-common/src/: lib.rs
n3ds-controller-server/: Cargo.toml
n3ds-controller-server/src/: main.rs  virtual_device.rs
n3ds-controller-server/src/virtual_device/: linux.rs  windows.rs
n3ds-remote-play-client/: Cargo.toml
n3ds-remote-play-client/.cargo/: config.toml
n3ds-remote-play-client/src/: main.rs
n3ds-remote-play-common/: Cargo.toml
n3ds-remote-play-common/src/: lib.rs
n3ds-remote-play-server/: Cargo.toml
n3ds-remote-play-server/src/: main.rs
n3ds-remote-play-server/src/virtual_device/: windows.rs
server/: Cargo.toml
server/src/: connection_task.rs  input_mapper.rs  main.rs  mpeg_encoder.rs  video_capture.rs  video_stream.rs  virtual_device.rs
server/src/virtual_device/: linux.rs  windows.rs
src/: main.rs
