[package]
name = "n3ds-controller"
version = "0.1.0"
edition = "2021"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Use the 3DS as a controller for PC games"

[profile.release]
debug = 1

[dependencies]
ctru-rs = { git = "https://github.com/AzureMarker/ctru-rs" }

[patch.crates-io]
libc = { git = "https://github.com/Meziu/libc.git" }