[workspace]
members = ["n3ds-remote-play-client", "n3ds-remote-play-server", "n3ds-remote-play-common"]

[profile.release]
debug = 1

[patch.'https://github.com/rust3ds/ctru-rs.git']
# Make sure all dependencies use the right ctru-sys package.
# Related: https://github.com/rust-lang/cargo/issues/5478
ctru-sys = { git = "https://www.github.com/rust3ds/ctru-rs", branch = "feature/ir-user" }
