[package]
name = "n3ds-remote-play-client"
version = "0.1.0"
edition = "2024"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Stream PC games to your 3DS. This is the client side which runs on the 3DS."

[dependencies]
anyhow = "1.0"
bincode = "1.3"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
env_logger = { version = "0.11", default-features = false }
libc = "0.2"
log = "0.4"
tokio = { version = "1.49.0", features = ["rt", "io-util", "time"] }
tokio-stream = { version = "0.1.18", default-features = false }
tokio-util = { version = "0.7.18", features = ["codec"] }

n3ds-remote-play-common = { path = "../common" }

# This ensures that we do not use the build feature in the server crate.
[target.armv6k-nintendo-3ds.dependencies]
ffmpeg-next = { version = "8.0.0", features = ["build"] }
