[package]
name = "n3ds-remote-play-client"
version = "0.1.0"
edition = "2024"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Stream PC games to your 3DS. This is the client side which runs on the 3DS."

[dependencies]
anyhow.workspace = true
bincode.workspace = true
ctru-rs.workspace = true
ctru-sys.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt", "io-util", "time", "macros"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec", "rt"] }

n3ds-remote-play-common.workspace = true

# This ensures that we do not use the build feature in the server crate.
[target.armv6k-nintendo-3ds.dependencies]
ffmpeg-next = { workspace = true, features = ["build"] }
