[package]
name = "n3ds-remote-play-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitflags = { version = "2.4", features = ["serde"] }
log = "0.4"
rtp-types = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["codec"] }

[dev-dependencies]
test-log = "0.2.19"
