[package]
name = "n3ds-controller-client"
version = "0.1.0"
edition = "2021"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Use the 3DS as a controller for PC games. This is the client side which runs on the 3DS."

[dependencies]
anyhow = "1.0"
bincode = "1.3"
ctru-rs = { git = "https://github.com/Meziu/ctru-rs" }

n3ds-controller-common = { path = "../n3ds-controller-common" }
