[package]
name = "n3ds-controller-server"
version = "0.1.0"
edition = "2021"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Use the 3DS as a controller for PC games. This is the server side which runs on the PC."

[dependencies]
anyhow = "1.0"
bincode = "1.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
uinput-tokio = { version = "0.1", default-features = false }

n3ds-controller-common = { path = "../n3ds-controller-common" }
