[package]
name = "n3ds-controller-server"
version = "0.1.0"
edition = "2021"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Use the 3DS as a controller for PC games. This is the server side which runs on the PC."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
input-linux = "0.5"
libc = "0.2"

n3ds-controller-common = { path = "../n3ds-controller-common" }
