[package]
name = "n3ds-remote-play-server"
version = "0.1.0"
edition = "2024"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Stream PC games to your 3DS. This is the server side which runs on the PC."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
futures = "0.3"
fast_image_resize = "3.0"
image = "0.24"
rtp-types = "0.1"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
libc = "0.2"
xcap = "0.8.1"

n3ds-remote-play-common = { path = "../common" }

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = "0.1.4"
