[package]
name = "n3ds-remote-play-server"
version = "0.1.0"
edition = "2024"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Stream PC games to your 3DS. This is the server side which runs on the PC."

[dependencies]
anyhow.workspace = true
bincode.workspace = true
futures.workspace = true
rtp-types.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
xcap.workspace = true
ffmpeg-next.workspace = true

n3ds-remote-play-common.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
input-linux.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client.workspace = true
